Fixed the textarea issue and improved the reaction spacing.

--- a/src/components/common/ChatBox/Message/Message.module.css
+++ b/src/components/common/ChatBox/Message/Message.module.css
@@ -55,10 +55,10 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  margin-left: 1%;
+  margin-left: 3%;
 }
 
-.yellowCardText{
+.yellowCardText {
   font-family: Sue Ellen Francisco;
   color: black;
   font-size: 1.2rem;
@@ -73,7 +73,7 @@
   margin-bottom: 3%;
 }
 
-.redCardText{
+.redCardText {
   display: flex;
   justify-content: center;
   font-family: Sue Ellen Francisco;
