--- a/src/components/common/ChatBox/Message/Reaction/Reaction.module.css
+++ b/src/components/common/ChatBox/Message/Reaction/Reaction.module.css
@@ -1,4 +1,5 @@
 .reaction {
+  margin-bottom: 1%;
   font-size: 0.8rem;
   border-radius: 5px;
   width: 2.8em;
